# python

./: classes.py  dictionaries.py  modules.py  search_line.py
basics/: .gitignore  basics.py  classes.py  classes_playground.py  classes_private.py  control-flow.py  data_structures.py  exceptions.py  filter.py  functions.py  inheritance.py  input_output.py  iterators.py  lists.py  namespaces.py  phones.json  poem.txt  type_hinting.py
basics/infinity_exercises/: basics.py  basics2.py  scopes_and_modules.py
basics/modules/: fibo.py  main.py  somemod.py  sys.py
basics/tutorial-env/: pyvenv.cfg
dist_packages/entry_points/: README.md  setup.py
dist_packages/flit/: README.md
dist_packages/individual_modules/: Convenience.ps1  README.md  setup.py
dist_packages/setuptools/: Convenience.ps1  README.md
dist_packages/simple/: Convenience.ps1  setup.py
examples/: duplicate_dir.py  error-handling.py
flask/simple-app/: app.py
flit/: LICENSE
jsonschema/: rules.json
jsonschema/test/: file.json  schema.json
jsonschema/validate_structure/: rules.json  rules2.json  schema.json
logging/: set_logging_level.py  simple.py
my_library/: change_directory_context_manager.py
packaging_tutorial/: setup.cfg
packaging_tutorial/flit/: pyproject.toml
packaging_tutorial/setuptools/: setup.cfg  setup.py
packaging_tutorial/setuptools/scripts/: oxy.py
ps/: pyvenv.cfg
pytest/: calculator.py  fixture2.py  test_raise.py  test_temp_directory.py  unit_test.py
samples/: list_directories_exclude.py  requests_ex.py
test/: config.json
toolbox/: increment_version.py
(+109 files in other folders)
