[metadata]
name = example-pkg-yoavklein
version = 0.0.1
author = Yoav Klein
author_email = yoavklein25@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts =
    scripts/oxy.py
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src